--- a/index.html
+++ b/index.html
@@ -5,6 +5,35 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About SMIC</title>
     <link rel="stylesheet" href="styles.css">
+    <style>
+        /* 스타일 추가 */
+        .project-modal {
+            display: none;
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.7);
+            z-index: 1000;
+            justify-content: center;
+            align-items: center;
+        }
+
+        .modal-content {
+            background-color: #fff;
+            padding: 20px;
+            border-radius: 5px;
+            max-width: 600px;
+        }
+
+        .close-modal {
+            position: absolute;
+            top: 10px;
+            right: 15px;
+            cursor: pointer;
+        }
+    </style>
 </head>
 <body>
     <header>
@@ -41,4 +70,57 @@
             <h2>Projects</h2>
             <div class="project">
                 <h3>Project 1</h3>
-                <p>Description of
+                <p>Description of Project 1</p>
+                <button onclick="openModal('modal1')">View Details</button>
+            </div>
+            <div class="project">
+                <h3>Project 2</h3>
+                <p>Description of Project 2</p>
+                <button onclick="openModal('modal2')">View Details</button>
+            </div>
+            <!-- 모달 팝업 -->
+            <div id="modal1" class="project-modal">
+                <div class="modal-content">
+                    <span class="close-modal" onclick="closeModal('modal1')">&times;</span>
+                    <h2>Project 1 Details</h2>
+                    <p>Detailed description of Project 1...</p>
+                </div>
+            </div>
+            <div id="modal2" class="project-modal">
+                <div class="modal-content">
+                    <span class="close-modal" onclick="closeModal('modal2')">&times;</span>
+                    <h2>Project 2 Details</h2>
+                    <p>Detailed description of Project 2...</p>
+                </div>
+            </div>
+        </div>
+    </section>
+    
+    <section id="contact">
+        <div class="container">
+            <h2>Contact</h2>
+            <p>Contact information goes here.</p>
+        </div>
+    </section>
+
+    <script>
+        // 모달 팝업 제어 함수들
+        function openModal(modalId) {
+            var modal = document.getElementById(modalId);
+            modal.style.display = "block";
+        }
+
+        function closeModal(modalId) {
+            var modal = document.getElementById(modalId);
+            modal.style.display = "none";
+        }
+
+        // 클릭 이외의 영역 클릭 시 모달 닫기
+        window.onclick = function(event) {
+            if (event.target.className === "project-modal") {
+                event.target.style.display = "none";
+            }
+        }
+    </script>
+</body>
+</html>
